--- a/week01/first-page.html
+++ b/week01/first-page.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Page</title>
-</head>
-<body>
+<--practicing to commit to git-->
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>My First Page</title>
+    </head>
+
+    <p>
     <h1>My First Page</h1>
-    <p>My favorite color is: </p>
-</body>
+    <p>My favorite color is: green </p>
+    </p> I am learning Web development! This is Fun!
+    Right?
+
+    </body>
+
 </html>
