--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Naomi Kukua Sullivan | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Naomi Kukua Sullivan | WDD 130</h1>
+        <img src="images/profile.jpg" alt="A Picture of Kukua" width="200">
+        <p>Hi there! My name is Naomi Kukua Sullivan. I usually go by Kukua. I am from Ghana.
+            In Ghana, if you are name Kukua, you were likely born on a Wednesday. I enjoy eating spicy foods. I love
+            my Ghanaian foods. When I am not eating, I am busy being a mom, trying to complete my assignments
+            or just staying indoors. I am currently a student at BYUPathway taking university classes online, aiming to
+            to complete my first certificate early next year!</p>
+    </main>
+    <footer>
+        <p>©2025 | Naomi Kukua Sullivan | Ghana</p>
+    </footer>
 </body>
+
 </html>
