fixed personal website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr">Rafting Website</a>
+            <a href="wwr/">Rafting Website</a>
         </nav>
     </header>
     <main>
@@ -20,7 +20,7 @@
         <p>Hi there! My name is Naomi Kukua Sullivan. I usually go by Kukua. I am from Ghana.
             In Ghana, if you are name Kukua, you were likely born on a Wednesday. I enjoy eating spicy foods. I love
             my Ghanaian foods. When I am not eating, I am busy being a mom, trying to complete my assignments
-            or just staying indoors. I am currently a student at BYUPathway taking university classes online, aiming to
+            or just staying indoors. I am currently a student at BYUPathway taking university classes online, aiming
             to complete my first certificate early next year!</p>
     </main>
     <footer>
