basic-layout-html

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content=" A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Naomi Kukua Sullivan">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="HTML Logo Layout" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://www.byupathway.edu/">BYUPathway</a></li>
+            <li><a href="https://www.byupathway.edu/career-services">BYUPathway-Career Services</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, quo!</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, officia? Nulla, veniam!</p>
+        </section>
+    </main>
+    <aside>
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/accra-ghana/400x640/accra-ghana-temple-758877-wallpaper.jpg"
+            alt="Accra-Ghana Temple" width="200">
+    </aside>
+    <footer>
+        <p>~ Naomi | Kukua | Sullivan</p>
+    </footer>
+
 </body>
+
 </html>
