--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Naomi Kukua Sullivan | WDD 130</h1>
         <img src="images/profile.jpg" alt="A Picture of Kukua" width="200">
         <p>Hi there! My name is Naomi Kukua Sullivan. I usually go by Kukua. I am from Ghana.
-            In Ghana, if you are name Kukua, you were likely born on a Wednesday. I enjoy eating spicy foods. I love
+            In Ghana, if you are named Kukua, you were likely born on a Wednesday. I enjoy eating spicy foods. I love
             my Ghanaian foods. When I am not eating, I am busy being a mom, trying to complete my assignments
             or just staying indoors. I am currently a student at BYUPathway taking university classes online, aiming
             to complete my first certificate early next year!</p>
