--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naomi Kukua Sullivan | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <meta name="description" content="Naomi Kukua's WDD 130 course home page">
+    <meta name="author" content="Naomi Kukua Sullivan">
+
+
 </head>
 
 <body>
@@ -24,6 +28,21 @@
             or just staying indoors. I am currently a student at BYUPathway taking university classes online, aiming
             to complete my first certificate early next year!</p>
     </main>
+    <aside>
+        <h2>Ghana</h2>
+        <img src="images/Ghanapic.jpg" alt="Ghana Picture">
+        <p> Ghana is a vibrant and welcoming country on the west coast of Africa, full of life, color, and warmth. From
+            the lively
+            streets of Accra to the historic castles along the Cape Coast, every corner tells a story of tradition and
+            pride. You
+            can wander through bustling markets, relax on golden beaches, or taste delicious local favorites like jollof
+            rice,
+            grilled tilapia, fufu and spicy meat or fish soup, tuo zaafi and more. What truly makes Ghana special,
+            though, is its people
+            — friendly, open-hearted, and always ready to make you feel at home. With music in the air, smiles all
+            around, and a strong sense of community,
+            Ghana is a place that captures your heart and stays with you long after you leave.</p>
+    </aside>
     <footer>
         <p>©2025 | Naomi Kukua Sullivan | Ghana</p>
     </footer>
