--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Naomi Kukua Sullivan's Pathway Worldwide BYU-Idaho WDD 130 course home page">
+    <meta name="author" content="Naomi Kukua Sullivan">
     <title>Naomi Kukua Sullivan | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <meta name="description" content="Naomi Kukua's WDD 130 course home page">
-    <meta name="author" content="Naomi Kukua Sullivan">
-
-
 </head>
 
 <body>
@@ -19,6 +18,7 @@
             <a href="wwr/">Rafting Website</a>
         </nav>
     </header>
+
     <main>
         <h1>Naomi Kukua Sullivan | WDD 130</h1>
         <img src="images/profile.jpg" alt="A Picture of Kukua" width="200">
@@ -28,6 +28,7 @@
             or just staying indoors. I am currently a student at BYUPathway taking university classes online, aiming
             to complete my first certificate early next year!</p>
     </main>
+
     <aside>
         <h2>Ghana</h2>
         <img src="images/Ghanapic.jpg" alt="Ghana Picture">
@@ -43,6 +44,7 @@
             around, and a strong sense of community,
             Ghana is a place that captures your heart and stays with you long after you leave.</p>
     </aside>
+
     <footer>
         <p>©2025 | Naomi Kukua Sullivan | Ghana</p>
     </footer>
