--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <aside>
         <h2>Ghana</h2>
-        <img src="images/Ghanapic.jpg" alt="Ghana Picture">
+        <img src="images/countryghana.jpg" alt="Ghana Picture">
         <p> Ghana is a vibrant and welcoming country on the west coast of Africa, full of life, color, and warmth. From
             the lively
             streets of Accra to the historic castles along the Cape Coast, every corner tells a story of tradition and
