--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta name="author" content="Naomi Kukua Sullivan">
     <title>Naomi Kukua Sullivan | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -36,7 +40,7 @@
             completing my
             first certificate early next year. I am excited for the journey ahead and grateful for the opportunity to
             keep learning and growing!</p>
-        <ul class="box">
+        <ul class="box indent">
             <li><a href="https://www.churchofjesuschrist.org/temples/photo-gallery/
                 seoul-korea-temple?lang=eng">Seoul
                     Korea Temple</a>
@@ -76,6 +80,3 @@
     <footer>
         <p>©2025 | Naomi Kukua Sullivan | Ghana</p>
     </footer>
-</body>
-
-</html>
