--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,12 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <meta name="description"
     content="Learn more about our exhilarating white-water rafting trips, our mission, and the dedicated team that brings these adventures to life.">
   <meta name="author" content="Naomi Kukua Sullivan">
-  <title>About Us | White Water Rafting</title>
-  <link rel="stylesheet" href="styles/rafting.css">
 
+  <title>About Us | White Water Rafting</title>
+
+  <link rel="stylesheet" href="styles/2rafting.css">
 </head>
 
 <body>
@@ -55,7 +60,8 @@
 
   </main>
   <footer>
-    <p>©2025 | Akwaaba RaPIDs Adventures | Naomi Kukua Sullivan</p>
+    <p>&copy; 2025 | Akwaaba RaPIDs Adventures | Naomi Kukua Sullivan</p>
+
     <nav class="socialmedia">
       <a href="https://facebook.com">
         <img src="images/facebook-bw.svg" alt="Facebook Icon" width="40">
@@ -68,8 +74,8 @@
       </a>
     </nav>
 
-
-
-
   </footer>
+
 </body>
+
+</html>
