--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
   <meta charset="UTF-8">
@@ -11,28 +11,29 @@
 
   <title>About Us | White Water Rafting</title>
 
-  <link rel="stylesheet" href="styles/2rafting.css">
+  <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
+
   <header>
-    <img src="images/z-dryoarlogo.png" alt="White Water Rafting Site Logo" width="150" height="auto">
+    <img src="images/z-dryoarlogo.png" alt="White Water Rafting Site Logo" width="150">
+
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="trips.html">Trips</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="trips.html">Trips</a>
+      <a href="contact.html">Contact Us</a>
     </nav>
   </header>
 
   <main>
     <div class="hero">
-      <img src="images/rafting16_1024 (1) (1).jpg" alt="Rafting Picture">
+      <img src="images/rafting16_1024.jpg" alt="Rafting Picture">
       <h1>Akwaaba Rapids Adventures</h1>
+
       <article>
-        <img src="images/rafting17_600_small.jpg" alt="Rafting Picture Small" width="200" height="auto">
+        <img src="images/2rafting17_600_small.jpg" alt="Rafting Picture Small" width="200">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore
           magna
           aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -41,6 +42,7 @@
         </p>
       </article>
     </div>
+
     <section>
       <h2>History</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Mauris sed orci ac nunc egestas
@@ -54,27 +56,22 @@
         vel ultrices auctor, purus turpis tempor massa, vitae consequat arcu justo eget velit.
       </p>
     </section>
+
     <section>
       <h2>Adventure Awaits You!</h2>
     </section>
-
   </main>
+
   <footer>
     <p>&copy; 2025 | Akwaaba RaPIDs Adventures | Naomi Kukua Sullivan</p>
 
     <nav class="socialmedia">
-      <a href="https://facebook.com">
-        <img src="images/facebook-bw.svg" alt="Facebook Icon" width="40">
-      </a>
-      <a href="https://youtube.com">
-        <img src="images/youtube-bw.svg" alt="Youtube Icon" width="40">
-      </a>
-      <a href="https://instagram.com">
-        <img src="images/instagram-bw.svg" alt="Instagram Icon" width="40">
-      </a>
+      <a href="https://facebook.com"><img src="images/facebook-bw.svg" alt="Facebook Icon" width="40"></a>
+      <a href="https://youtube.com"><img src="images/youtube-bw.svg" alt="Youtube Icon" width="40"></a>
+      <a href="https://instagram.com"><img src="images/instagram-bw.svg" alt="Instagram Icon" width="40"></a>
     </nav>
-
   </footer>
 
 </body>
+
 </html>
