--- a/index.html
+++ b/index.html
@@ -26,57 +26,65 @@
         </nav>
     </header>
 
-    <main>
-        <h1>Naomi Kukua Sullivan | WDD 130</h1>
-        <img src="images/profile.jpg" alt="A Picture of Kukua" width="200">
-        <p>Hi there! My name is Naomi Kukua Sullivan, but I usually go by Kukua. I am from Ghana. In Ghana, if you are
-            named Kukua,
-            it usually means you were born on a Wednesday—a fun cultural detail I have always loved. I enjoy eating
-            spicy foods and
-            nothing beats my favorite Ghanaian dishes.
-            When I am not eating, I am busy being a mom, working on my assignments, or simply enjoying some quiet time
-            indoors. I am
-            currently a student at BYUPathway Worldwide, taking university classes online and working hard toward
-            completing my
-            first certificate early next year. I am excited for the journey ahead and grateful for the opportunity to
-            keep learning and growing!</p>
-        <ul class="box indent">
-            <li><a href="https://www.churchofjesuschrist.org/temples/photo-gallery/
+    <div class="grid">
+        <main>
+            <h1>Naomi Kukua Sullivan | WDD 130</h1>
+            <img src="images/profile.jpg" alt="A Picture of Kukua" width="200">
+            <p>Hi there! My name is Naomi Kukua Sullivan, but I usually go by Kukua. I am from Ghana. In Ghana, if you
+                are
+                named Kukua,
+                it usually means you were born on a Wednesday—a fun cultural detail I have always loved. I enjoy eating
+                spicy foods and
+                nothing beats my favorite Ghanaian dishes.
+                When I am not eating, I am busy being a mom, working on my assignments, or simply enjoying some quiet
+                time
+                indoors. I am
+                currently a student at BYUPathway Worldwide, taking university classes online and working hard toward
+                completing my
+                first certificate early next year. I am excited for the journey ahead and grateful for the opportunity
+                to
+                keep learning and growing!</p>
+            <ul class="box indent">
+                <li><a href="https://www.churchofjesuschrist.org/temples/photo-gallery/
                 seoul-korea-temple?lang=eng">Seoul
-                    Korea Temple</a>
-            </li>
-            <li><a href="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/
+                        Korea Temple</a>
+                </li>
+                <li><a href="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/
                     salt-lake-city-utah/800x500/salt-lake-temple-37762.jpg">Salt
-                    Lake Temple</a>
-            </li>
-            <li><a href="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/
+                        Lake Temple</a>
+                </li>
+                <li><a href="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/
                     accra-ghana/800x800/accra-ghana-temple-759299-wallpaper.jpg">Accra
-                    Ghana Temple</a>
-            </li>
-        </ul>
-    </main>
+                        Ghana Temple</a>
+                </li>
+            </ul>
+        </main>
 
-    <aside class="box">
-        <h2>Ghana</h2>
-        <img src="images/countryghana.jpg" alt="Ghana Picture">
-        <p> Ghana is a vibrant and welcoming country on the west coast of Africa, full of life, color, and
-            warmth. From
-            the lively
-            streets of Accra to the historic castles along the Cape Coast, every corner tells a story of
-            tradition and
-            pride. You
-            can wander through bustling markets, relax on golden beaches, or taste delicious local favorites
-            like jollof
-            rice,
-            grilled tilapia, fufu and spicy meat or fish soup, tuo zaafi and more. What truly makes Ghana
-            special,
-            though, is its people
-            — friendly, open-hearted, and always ready to make you feel at home. With music in the air, smiles
-            all
-            around, and a strong sense of community,
-            Ghana is a place that captures your heart and stays with you long after you leave.</p>
-    </aside>
+        <aside class="box">
+            <h2>Ghana</h2>
+            <img src="images/countryghana.jpg" alt="Ghana Picture">
+            <p> Ghana is a vibrant and welcoming country on the west coast of Africa, full of life, color, and
+                warmth. From
+                the lively
+                streets of Accra to the historic castles along the Cape Coast, every corner tells a story of
+                tradition and
+                pride. You
+                can wander through bustling markets, relax on golden beaches, or taste delicious local favorites
+                like jollof
+                rice,
+                grilled tilapia, fufu and spicy meat or fish soup, tuo zaafi and more. What truly makes Ghana
+                special,
+                though, is its people
+                — friendly, open-hearted, and always ready to make you feel at home. With music in the air, smiles
+                all
+                around, and a strong sense of community,
+                Ghana is a place that captures your heart and stays with you long after you leave.</p>
+        </aside>
+    </div>
 
     <footer>
         <p>©2025 | Naomi Kukua Sullivan | Ghana</p>
     </footer>
+</body>
+
+</html>
