--- a/wwr/about.html
+++ b/wwr/about.html
@@ -43,22 +43,58 @@
       </article>
     </div>
 
-    <section>
+    <section class="History">
       <h2>History</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Mauris sed orci ac nunc egestas
-        luctus.
-        Suspendisse potenti. Integer tincidunt, turpis sit amet tristique feugiat, urna libero pulvinar augue, nec
-        ultricies
-        lorem orci eget sapien. Vivamus non nisi a magna varius convallis. Curabitur pretium, justo ut iaculis
-        convallis, quam
-        erat efficitur tortor, vel porta lorem nunc non mauris. Phasellus vitae leo eu ipsum cursus hendrerit. Donec
-        dapibus, ex
-        vel ultrices auctor, purus turpis tempor massa, vitae consequat arcu justo eget velit.
-      </p>
+      <div class="history-layout">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis
+          ac
+          neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend
+          tristique,
+          tortor mauris molestie elit.
+        </p>
+        <img src="images/2rafting17_600_small.jpg" alt="Rafting Picture Small">
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis
+          ac
+          neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend
+          tristique,
+          tortor mauris molestie elit.
+
+        </p>
+      </div>
     </section>
 
-    <section>
+    <section class="Adventures">
       <h2>Adventure Awaits You!</h2>
+      <div class="adventure-gallery">
+
+        <figure>
+          <img src="images/rafting_safety.jpg" alt="Rafting Safety Picture">
+          <figcaption>Safety</figcaption>
+        </figure>
+
+        <figure>
+          <img src="images/rafting_scenery.jpg" alt="Rafting Scenery Picture" width="100">
+          <figcaption>Scenery</figcaption>
+        </figure>
+
+        <figure>
+          <img src="images/rafting_fun.jpg" alt="Rafting Fun Picture">
+          <figcaption>Fun</figcaption>
+        </figure>
+
+        <figure>
+          <img src="images/rafting_the rush.jpg" alt="Rafting Rash Picture">
+          <figcaption>The Rush</figcaption>
+        </figure>
+
+        <figure>
+          <img src="images/rafting_river.jpg" alt="Rafting River Picture">
+          <figcaption>River</figcaption>
+        </figure>
+
+      </div>
     </section>
   </main>
 
