--- a/wwr/about.html
+++ b/wwr/about.html
@@ -85,7 +85,7 @@
         </figure>
 
         <figure>
-          <img src="images/rafting_the rush.jpg" alt="Rafting Rash Picture">
+          <img src="images/rafting_the_rush.jpg" alt="Rafting Rash Picture">
           <figcaption>The Rush</figcaption>
         </figure>
 
