--- a/week05/quiz.html
+++ b/week05/quiz.html
@@ -20,7 +20,7 @@
 
       <label for="q3"> <span>3.</span> Which of the following is a valid CSS comment?</label>
       <select id="q3" name="q3">
-        <option value="" disabled selected> Choose one</option>
+        <option value="" selected disabled> Choose one</option>
         <option value="A">A. //this is a CSS comment</option>
         <option value="B">B. /*this is a CSS comment*/</option>
         <option value="C">C. #this is a CSS comment#</option>
