--- a/wwr/2testing-rafting.html
+++ b/wwr/2testing-rafting.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Naomi Kukua Sullivan">
 
   <title>Contact Us | White Water Rafting</title>
-  <link rel="stylesheet" href="styles/rafting.css">
+  <link rel="stylesheet" href="styles/3rafting.css">
 </head>
 
 <body>
