--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,6 +33,7 @@
       <h1>Akwaaba Rapids Adventures</h1>
 
       <article>
+        <h2 class="article-title">Welcome to the Rapids</h2>
 
         <img src="images/2rafting17_600_small.jpg" alt="Rafting Picture Small" width="200">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore
