--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -5,11 +5,117 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description"
-    content="Learn more about our exhilarating white-water rafting trips, our mission, and the dedicated team that brings these adventures to life.">
+  <meta name="description" content="Explore all White Water Rafting trips and adventures.">
   <meta name="author" content="Naomi Kukua Sullivan">
 
-  <title>About Us | White Water Rafting</title>
+  <title>Trips | White Water Rafting</title>
 
   <link rel="stylesheet" href="styles/rafting.css">
 </head>
+
+<body>
+
+  <header>
+    <img src="images/z-dryoarlogo.png" alt="White Water Rafting Site Logo" width="150">
+
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="trips.html">Trips</a>
+      <a href="contact.html">Contact Us</a>
+    </nav>
+  </header>
+  <!-- CALL TO ACTION -->
+  <section class="cta">
+    <h2>Have Questions About a Trip?</h2>
+    <p>Reach out and our staff will help you choose the perfect adventure.</p>
+    <a class="cta-button" href="contact.html">Contact Us</a>
+  </section>
+
+  <!-- TRIP DESCRIPTIONS -->
+  <section class="trip-list">
+
+    <div class="trip">
+      <img src="images/Beginner-River-Run.jpg" alt="Beginner River Run">
+      <div>
+        <h3>Beginner River Run</h3>
+        <p>
+          A relaxing and scenic journey ideal for families, first-timers, and nature lovers.
+          Calm waters, beautiful landscapes, and expert guides make this a perfect entry-level trip.
+        </p>
+      </div>
+    </div>
+
+    <div class="trip">
+      <img src="images/Rapid-Rush-Adventure.webp" alt="Rapid Rush Adventure">
+      <div>
+        <h3>Rapid Rush Adventure</h3>
+        <p>
+          Experience a mix of moderate rapids and peaceful stretches.
+          Perfect for those seeking excitement without the intensity of advanced rapids.
+        </p>
+      </div>
+    </div>
+
+    <div class="trip">
+      <img src="images/Extreme-Rapids-Challenge.webp" alt="Extreme Rapids Challenge">
+      <div>
+        <h3>Extreme Rapids Challenge</h3>
+        <p>
+          Our most intense and adrenaline-packed adventure.
+          Expect powerful rapids, swift currents, and a ride you’ll never forget.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- TRIPS TABLE -->
+  <section class="trips-table">
+    <h2>All Available Trips</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Trip Name</th>
+          <th>Difficulty</th>
+          <th>Duration</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Beginner River Run</td>
+          <td>Easy</td>
+          <td>2 hours</td>
+          <td>$45</td>
+        </tr>
+        <tr>
+          <td>Rapid Rush Adventure</td>
+          <td>Moderate</td>
+          <td>4 hours</td>
+          <td>$85</td>
+        </tr>
+        <tr>
+          <td>Extreme Rapids Challenge</td>
+          <td>Difficult</td>
+          <td>6 hours</td>
+          <td>$125</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+
+
+
+  <footer>
+    <p>&copy; 2025 | Akwaaba RaPIDs Adventures | Naomi Kukua Sullivan</p>
+
+    <nav class="socialmedia">
+      <a href="https://facebook.com"><img src="images/facebook-bw.svg" alt="Facebook Icon" width="40"></a>
+      <a href="https://youtube.com"><img src="images/youtube-bw.svg" alt="Youtube Icon" width="40"></a>
+      <a href="https://instagram.com"><img src="images/instagram-bw.svg" alt="Instagram Icon" width="40"></a>
+    </nav>
+  </footer>
+
+</body>
+
+</html>
