--- a/wwr/index.html
+++ b/wwr/index.html
@@ -29,7 +29,7 @@
 
   <!-- HERO SECTION -->
   <section class="hero">
-    <img src="images/hero-rafting.jpg" alt="Rafting Adventure" class="hero-img">
+    <img src="images/Rafting-Adventure.webp" alt="Rafting Adventure" class="hero-img">
     <h1 class="hero-title">Find Your Next Adventure</h1>
   </section>
 
@@ -57,7 +57,7 @@
   <!-- GRID LAYOUT CONTENT -->
   <section class="about-grid">
     <div class="grid-item">
-      <img src="images/rafting-fun.jpg" alt="Family rafting fun">
+      <img src="images/group-family-rafting.webp" alt="Family rafting fun">
       <h3>Adventure for Everyone</h3>
       <p>
         From peaceful river floats to raging rapids, we offer experiences for all ages and adventure levels.
@@ -65,7 +65,7 @@
     </div>
 
     <div class="grid-item">
-      <img src="images/rafting-team.jpg" alt="Rafting team">
+      <img src="images/group-family-rafting.webp" alt="Family rafting fun">
       <h3>Experienced Guides</h3>
       <p>
         Our certified guides ensure your trip is fun, exciting, and safe from launch to landing.
@@ -73,6 +73,7 @@
     </div>
 
     <div class="grid-item full-width">
+      <img src="images/group-family-rafting.webp" alt="Family rafting fun">
       <h3>Our Mission</h3>
       <p>
         We believe outdoor experiences bring people together. Our mission is to provide unforgettable rafting adventures
