--- a/wwr/index.html
+++ b/wwr/index.html
@@ -29,7 +29,7 @@
 
   <!-- HERO SECTION -->
   <section class="hero">
-    <img src="images/Rafting-Adventure.webp" alt="Rafting Adventure" class="hero-img">
+    <img src="images/Middle-Fork-Salmon-River-Camp.jpg" alt="Rafting Adventure" class="hero-img">
     <h1 class="hero-title">Find Your Next Adventure</h1>
   </section>
 
